<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/team_a_label"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/zero_label"
                android:textColor="@android:color/black"
                android:textSize="56sp"/>

            <Button
                android:id="@+id/team_a_three_points_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="onPointsButtonClick"
                android:text="@string/three_points_babel"/>

            <Button
                android:id="@+id/team_a_two_points_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="onPointsButtonClick"
                android:text="@string/two_points_label"/>

            <Button
                android:id="@+id/team_a_free_throw_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="onPointsButtonClick"
                android:text="@string/free_throw_label"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/fouls_label"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/team_a_fouls"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/zero_label"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/team_a_foul_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/holo_blue_light"
                android:onClick="onFoulButtonClick"
                android:text="@string/foul_label"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/substitutions_label"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/team_a_subs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/zero_label"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/team_a_subs_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/holo_blue_light"
                android:onClick="onSubButtonClick"
                android:text="@string/substitution_label"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/team_b_label"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/zero_label"
                android:textColor="@android:color/black"
                android:textSize="56sp"/>

            <Button
                android:id="@+id/team_b_three_points_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="onPointsButtonClick"
                android:text="@string/three_points_babel"/>

            <Button
                android:id="@+id/team_b_two_points_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="onPointsButtonClick"
                android:text="@string/two_points_label"/>

            <Button
                android:id="@+id/team_b_free_throw_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="onPointsButtonClick"
                android:text="@string/free_throw_label"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/fouls_label"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/team_b_fouls"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/zero_label"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/team_b_foul_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/holo_blue_light"
                android:onClick="onFoulButtonClick"
                android:text="@string/foul_label"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/substitutions_label"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/team_b_subs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/zero_label"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/team_b_subs_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/holo_blue_light"
                android:onClick="onSubButtonClick"
                android:text="@string/substitution_label"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:onClick="onUndo"
        android:text="@string/undo_label"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:onClick="onReset"
        android:text="@string/reset_label"/>

</RelativeLayout>